tests/pos/classes/30-implements.ts
//adapted from transducers

interface Foo<M extends ReadOnly> {}

class FooImpl<M extends ReadOnly> implements Foo<M> {
    constructor() { }
}

/*@ x :: Foo<Immutable> */
let x = new FooImpl();
