tests/neg/classes/35-ctor-args-missing.ts
class Foo<M extends ReadOnly> {
	constructor() {}
}

let x = new Foo;
